# cross_language_ray_cluster_experiment

./: Dockerfile  example-cluster.yaml  pyproject.toml  readme.md  script_one.py  script_two.py
ScalaSparkTest/: build.sbt
ScalaSparkTest/src/main/scala/: PiExample.scala  PiSpark.scala
run-on-head/: Dockerfile  example-cluster.yaml  run_on_head_script.py  script.py
run-single-machine/: script_one.py  script_two.py
