[tool.poetry]
name = "cross_language_ray_experiment"
version = "0.1.0"
description = "test cross language support in ray for java"
authors = ["marcosandoval <kada9001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ray = "^1.2.0"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
